worker-macros/tests/ui/scheduled-not-async.stderr
error: custom attribute panicked
 --> tests/ui/scheduled-not-async.rs:3:1
  |
3 | #[event(scheduled)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the `scheduled` handler must be an async function
